[tool.poetry]
name = "semby"
version = "1.0.5"
description = "A simple stack based assembly like programming language"
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/vcokltfre/semby"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
taskipy = "^1.9.0"

[tool.poetry.scripts]
semby = "semby.cli:app"

[tool.taskipy.tasks]
lint = "black . && isort --profile black ."
pre-commit = "pre-commit install"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
